--- a/composer.json
+++ b/composer.json
@@ -3,6 +3,7 @@
     "description": "Library to assist integrating APIs to WP Job Manager",
     "type": "library",
     "version": "1.0.0",
+    "minimum-stability": "stable",
     "authors": [
         {
             "name": "David Jensen",
