--- a/composer.json
+++ b/composer.json
@@ -2,13 +2,18 @@
     "name": "seattlewebco/wp-job-manager-recruiter",
     "description": "Library to assist integrating APIs to WP Job Manager",
     "type": "library",
-    "version": "1.0.0",
-    "minimum-stability": "stable",
     "authors": [
         {
             "name": "David Jensen",
             "email": "david@seattlewebco.com"
         }
     ],
-    "require": {}
+    "require": {
+        "league/oauth2-client": "^2.4",
+        "guzzlehttp/guzzle": "^6.3",
+        "monolog/monolog": "^1.24"
+    },
+    "require-dev": {
+        "phpunit/phpunit": "8.0.5"
+    },
 }
