--- a/composer.json
+++ b/composer.json
@@ -15,5 +15,8 @@
     },
     "require-dev": {
         "phpunit/phpunit": "8.0.5"
+    },
+    "autoload": {
+        "psr-4": {"SeattleWebCo\\WPJobManager\\Recruiter\\": "src"}
     }
 }
